objects/Requests__c.object
<CustomObject>
    <description>Ticketing system for all Salesforce-related user requests. Linked to JIRA</description>
    <label>Request</label>
    <nameField>
        <displayFormat>RN-{0000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age in days between when the request was created versus closed/rejected or between the date created and today if it is still in an open status</description>
        <formula>IF (((TEXT(Request_Status__c))= &quot;Done&quot; ||
(TEXT(Request_Status__c))= &quot;Done&quot; ||
(TEXT(Request_Status__c))= &quot;Rejected&quot;), (PKI_Close_Date__c  - DATEVALUE(CreatedDate)),(DATEVALUE (NOW()) - DATEVALUE( CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If request is open then it is the number of days between when it was created and today otherwise the number of days between when it was created and closed/rejected</inlineHelpText>
        <label>Age (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <inlineHelpText>Help - Paste the link to the page which you are having problems with
Improvement - Paste the link to the page
New Feature - paste the link to additional information</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>As_a__c</fullName>
        <inlineHelpText>The point of view that this User Story is told from. Examples are sales user, EH/LST/ONE/Dx sales user, marketing user, service user, sales region manager, help desk support, etc.</inlineHelpText>
        <label>As a</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IMAGE ( 
case ( RecordType.Name, 
&quot;Help Request&quot;,&quot;/servlet/servlet.FileDownload?file=0153A000003l37D&quot;, 
&quot;Improvement Request&quot;,&quot;/servlet/servlet.FileDownload?file=0153A000003l379&quot;, 
&quot;New Feature Request&quot;,&quot;/servlet/servlet.FileDownload?file=0153A000003l377&quot;, 
&quot;/servlet/servlet.FileDownload?file=0153A000003l37D&quot;), 
&quot;Type&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Med</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_want_to__c</fullName>
        <inlineHelpText>Enter the request in this field. Example of an entry into the &quot;I want to&quot; field: &quot;be able to click a button and have the contact&apos;s mailing address match the account&apos;s shipping address&quot;.</inlineHelpText>
        <label>I want to</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>So_that_I__c</fullName>
        <inlineHelpText>Enter the benefit or business reason for the implementation of this User Story.</inlineHelpText>
        <label>So that I</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>IF(

(TEXT(Request_Status__c))= &quot;Request Closed&quot; ||
(TEXT(Request_Status__c))= &quot;Request Completed&quot; || 
(TEXT(Request_Status__c))= &quot;Rejected&quot;,Today(),null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>My_Request__c</fullName>
        <formula>IF(Name_of_Requestor__c  = $User.Id,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Request?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bug_Details__c</fullName>
        <inlineHelpText>Enter information about the bug. Feel free to include links and screenshots to help clarify the bug that you experienced.</inlineHelpText>
        <label>Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_Needed__c</fullName>
        <description>Date the requestor would like the work completed by.</description>
        <inlineHelpText>Date the requestor would like the work completed by.</inlineHelpText>
        <label>Date Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Provide details on your request so it can be properly assessed by the support group</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Co_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsCurrentUser__c</fullName>
        <description>Compares the logged in user&apos;s name with the name in the field [Name of Requestor]</description>
        <formula>Name_of_Requestor__r.FirstName + &apos; &apos; + Name_of_Requestor__r.LastName</formula>
        <label>IsCurrentUser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_SBE__c</fullName>
        <description>SBE of requestor from their user profile</description>
        <formula>text(Name_of_Requestor__r.Business__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SBE of requestor from their user profile</inlineHelpText>
        <label>Requestor SBE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <label>Support Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level - 1</fullName>
                    <default>true</default>
                    <label>Level - 1</label>
                </value>
                <value>
                    <fullName>Level - 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>customer_comm__c</fullName>
        <inlineHelpText>Enter any infomation that needs to be communicated to requestor</inlineHelpText>
        <label>Customer Communication</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <description>This is the date which the admin team completed the work. Mapped to JIRA DUE DATE field</description>
        <inlineHelpText>This is the date when the request was resolved or deployed into production</inlineHelpText>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalated_Date__c</fullName>
        <description>Date which operations escalated to IT support</description>
        <inlineHelpText>Date which operations escalated to IT support</inlineHelpText>
        <label>Escalated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PKI_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority_Level__c</fullName>
        <description>Admin sets the priority during the triage/assessment stage</description>
        <inlineHelpText>Admin sets the priority during the triage/assessment stage</inlineHelpText>
        <label>Priority Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                    <label>2 - High</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <label>3 - Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <label>4 - Low</label>
                </value>
                <value>
                    <fullName>5 - Nice to Have</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <description>The field level security is intentionally set to Read-Only for all profiles except for System Administrator and Delegated Administrator.</description>
        <inlineHelpText>Submitted
Assessment - analyzing what is required and whether can be done
In Progress - work has started
Testing
Ready for Release - work has been completed but not deployed
Done - deployed into production
Rejected
On Hold - waiting for more info</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Ready for Release</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Reopened</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <isActive>false</isActive>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Request Closed</fullName>
                    <isActive>false</isActive>
                    <label>Request Closed</label>
                </value>
                <value>
                    <fullName>Request Completed</fullName>
                    <isActive>false</isActive>
                    <label>Request Completed</label>
                </value>
                <value>
                    <fullName>Request Verification</fullName>
                    <isActive>false</isActive>
                    <label>Request Verification</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Impact__c</fullName>
        <description>What functionality are you unable to perform?
How many users are impacted?
Is there currently a workaround in place?
Is there a pending deployment / go live?</description>
        <inlineHelpText>How many people will benefit or will be impacted by this change?</inlineHelpText>
        <label>Business Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level1_Duration__c</fullName>
        <formula>IF
(!ISBLANK(Escalated_Date__c),
(Escalated_Date__c -  DATEVALUE(CreatedDate)),
(Close_Date__c - DATEVALUE(CreatedDate)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 1 Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level2_Duration__c</fullName>
        <formula>Close_Date__c -  Escalated_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 2 Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Summary__c</fullName>
        <description>Summary of request (up to 50 characters)</description>
        <inlineHelpText>Summary of request (up to 50 characters)</inlineHelpText>
        <label>Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <description>Details on why the request was rejected</description>
        <inlineHelpText>Details on why the request was rejected</inlineHelpText>
        <label>Reason for Rejection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affected_Region_s__c</fullName>
        <inlineHelpText>This field identifies the regions that are included in the scope of the Request</inlineHelpText>
        <label>Affected Region(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMERICAS</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person requesting the work</description>
        <inlineHelpText>Person requesting the work</inlineHelpText>
        <label>Name of Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Related_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_Release__c</fullName>
        <description>Indicates the name of the release cycle from JIRA</description>
        <inlineHelpText>Indicates the name of the release cycle from JIRA</inlineHelpText>
        <label>Scheduled Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrator_Notes__c</fullName>
        <description>Place for admin to enter notes relating to the request.</description>
        <inlineHelpText>Place for admin to enter notes relating to the request.</inlineHelpText>
        <label>Administrator Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NameOfRequestorText__c</fullName>
        <formula>Name_of_Requestor__r.FirstName  + &apos; &apos; +  Name_of_Requestor__r.LastName</formula>
        <label>NameOfRequestorText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Territory__c</fullName>
        <description>Territory of requestor from their user profile</description>
        <formula>text( Name_of_Requestor__r.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Territory of requestor from their user profile</inlineHelpText>
        <label>Requestor Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Case_Number__c</fullName>
        <label>Salesforce Case Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time__c</fullName>
        <description>This field is used to display the time portion in addition to the date portion of the Last Modified Date</description>
        <formula>LastModifiedDate</formula>
        <label>Last Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Completion_Date__c</fullName>
        <description>This is the date which support is estimating for completion of the request</description>
        <inlineHelpText>This is the date which support is estimating for completion of the request</inlineHelpText>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Affected_PKI_Application__c</fullName>
        <description>This field is also used to map to the JIRA Project ID through the JIRA/SFDC integration.</description>
        <inlineHelpText>Select the Application which you require assistance with</inlineHelpText>
        <label>I need assistance with</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Cloud</fullName>
                </value>
                <value>
                    <fullName>Service Cloud</fullName>
                </value>
                <value>
                    <fullName>QuoteStudio</fullName>
                </value>
                <value>
                    <fullName>Salesforce CPQ</fullName>
                </value>
                <value>
                    <fullName>ServiceMax</fullName>
                </value>
                <value>
                    <fullName>FPX</fullName>
                </value>
                <value>
                    <fullName>FPX Firepond</fullName>
                    <isActive>false</isActive>
                    <label>FPX Firepond</label>
                </value>
                <value>
                    <fullName>Quote Studio</fullName>
                    <isActive>false</isActive>
                    <label>Quote Studio</label>
                </value>
                <value>
                    <fullName>SalesForce</fullName>
                    <isActive>false</isActive>
                    <label>SalesForce</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_know_this_is_done_when__c</fullName>
        <inlineHelpText>List the steps or conditions that will let the developer know when the User Story is completed.</inlineHelpText>
        <label>I know this is done when</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <recordTypes>
        <fullName>Help_Request</fullName>
        <active>true</active>
        <description>Use this record type to request for assistance</description>
        <label>Help</label>
    </recordTypes>
    <recordTypes>
        <fullName>Report_a_Bug</fullName>
        <active>true</active>
        <description>Use this record type to report a bug with a Sales Application</description>
        <label>Report a Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>Improvement_Request</fullName>
        <active>true</active>
        <description>Use this record type to request improvements to existing features or functionality</description>
        <label>Improvement</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Feature_Request</fullName>
        <active>true</active>
        <description>Use this record type to request new features and functionality</description>
        <label>New Feature</label>
    </recordTypes>
    <validationRules>
        <fullName>Restrict_Specific_Owners</fullName>
        <active>true</active>
        <description>the SFDC Admin team uses JIra as the enterprise service tool. All tickets must be created and assigned there, so specific SFDC Admins will be restricted from being owners on Requests in SFDC.</description>
        <errorConditionFormula>OR(
Owner:User.Username = &quot;brad.durbin@perkinelmer.com&quot;,
Owner:User.Username = &quot;mary.mendoza@perkinelmer.com&quot;,
Owner:User.Username = &quot;michael.glassmaker@perkinelmer.com&quot;,
Owner:User.Username = &quot;rajalakshmi.r@listertechnologies.com&quot;,

Owner:Queue.QueueName = &quot;Requests - SalesForce Queue&quot;)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>V.RULE_REQUEST_002: Choose a different owner or create ticket in JIRA. SFDC Admin Team members can not be assigned as owners of a request in SFDC.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Request_Cannot_be_Updated</fullName>
        <active>true</active>
        <description>Request cannot be updated because a JIRA Issue was created. However, Notes and Comments can be added to the Request for clarification purposes.</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Request_Status__c, &quot;Submitted&quot;)),
 OR(ISCHANGED(Affected_PKI_Application__c),
  ISCHANGED(As_a__c),
  ISCHANGED(I_know_this_is_done_when__c),
  ISCHANGED(I_want_to__c),
  ISCHANGED(Bug_Details__c),
  ISCHANGED(So_that_I__c)),
 AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
  $Profile.Name &lt;&gt; &quot;Delegated Administrator&quot;))</errorConditionFormula>
        <errorMessage>V.RULE_REQUEST_001: This Request was reviewed and approved. Work has begun on the Request so details cannot be changed. Although you can&apos;t make changes to the Request, you can add notes and Chatter comments for clarification purposes.</errorMessage>
    </validationRules>
</CustomObject>